# gpuT2

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
analysis/: plot_frac_sweep.py  results.ipynb
analysis/dlt/: .gitignore  README.md  build.sh  dlt_split.cpp  measure_overhead.sh  overhead.csv  plot_dlt.py
include/: GameOfLife.h
include/gol/: Barrier.hpp  Config.hpp  Grid.hpp  HybridNode.hpp  IRenderer.hpp  ISimEngine.hpp  LifeRules.hpp  Timer.hpp
include/gol/engines/: CpuEngine.hpp  CudaEngine.hpp  HybridEngine.hpp  IHaloPartition.hpp  OpenCLEngine.hpp
include/gol/engines/cuda/: CudaHaloPartition.hpp  kernel.cuh
include/gol/engines/opencl/: OpenCLHaloPartition.hpp
include/gol/gui/: GolBench.hpp  GolGlWidget.hpp  MainWindow.hpp
include/gol/patterns/: Pattern.hpp  RleLoader.hpp
include/gol/render/: AnsiRenderer.hpp  CudaGlInterop.hpp  NullRenderer.hpp  TextRenderer.hpp
patterns/: acorn.rle  birth_on_six.rle  blinker.rle  block.rle  glider.rle  highlife_c98_gun.rle  highlife_replicator.rle  highlife_spaceship.rle  r_pentomino.rle
report/: hybrid_report.tex  main.tex  manual.tex
report/diagrams/: architecture.mmd  cuda_block_mapping.dot  cuda_coordinate_spaces.dot  cuda_stencil_addressing.dot  gui_architecture.mmd  gui_dataflow.mmd  mermaid-config.json  puppeteer.json
report/slides/: slides.tex
results/: cpu_results.csv  opencl_results.csv  sweep_cuda_opt.csv  sweep_gpu_opt.csv  sweep_scaling.csv
results/linux/: frac_sweep.csv  sweep_gpu_opt.csv  sweep_scaling.csv  sweep_scaling_opencl_shared1.csv
results/profiling/: ncu_global.ncu-rep  ncu_global_8192.ncu-rep  ncu_shared.ncu-rep  nsys_global.nsys-rep  nsys_global.sqlite
scripts/: run_gui.sh  sweep.sh  sweep_fracs.sh  sweep_gpu_opt.ps1  sweep_scaling.ps1
src/: GameOfLife.cpp
src/core/: Config.cpp  main.cpp
src/engines/cpu/: CpuEngine.cpp
src/engines/cuda/: CudaEngine.cu  CudaHaloPartition.cu  kernel.cu
src/engines/hybrid/: HybridEngine.cpp
src/engines/opencl/: OclDeviceSelect.hpp  OpenCLEngine.cpp  OpenCLHaloPartition.cpp  kernel.cl
src/gui/: GolBench.cpp  GolGlWidget.cpp  MainWindow.cpp  main_gui.cpp
src/gui/shaders/: display.frag  display.vert
src/patterns/: Pattern.cpp  RleLoader.cpp
src/render/: AnsiRenderer.cpp  CudaGlInterop.cu  TextRenderer.cpp
tests/: CMakeLists.txt  compile_smoke_test.cpp  cpu_parallel_test.cpp  cuda_equivalence_test.cpp  hybrid_equivalence_test.cpp  opencl_equivalence_test.cpp  rle_loader_test.cpp  rules_test.cpp  test1.cpp
video/: burn_captions.sh  captions.en.srt  captions.es.srt  gol_gui_storyboard.md
